--- a/theme.css
+++ b/theme.css
@@ -272,10 +272,15 @@ p {
 
 .development .illustration .moving-layer {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 10%;
+    left: 10%;
+    width: 80%;
+    height: 80%;
+}
+
+.development .illustration .moving-layer svg {
     width: 100%;
-    height: 100%;    
+    height: 100%;
 }
 
 .development .illustration img {
